Inicio de sesion por usuario

--- a/src/main/resources/HTML/login/login.html
+++ b/src/main/resources/HTML/login/login.html
@@ -26,7 +26,7 @@
     <div class="login-section">
         <h2>¡Hola!</h2>
         <p>Ingresa tus datos para <strong>iniciar sesión</strong>.</p>
-        <form action="/loginAdmin" method="post">
+        <form action="/login" method="post">
             <div class="input-group">
                 <i class="material-icons">person</i>
                 <input type="text" name="profile" placeholder="Ingresa tu código de administrador" required>
