Registro de aulas

--- a/src/main/resources/HTML/administrador/dashboardAdmin.html
+++ b/src/main/resources/HTML/administrador/dashboardAdmin.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="card">
                     <img src="/img/classroom.png" alt="Ver aulas">
-                    <a href="#">Ver aulas</a>
+                    <a href="/ListarAula">Ver aulas</a>
                 </div>
                 <div class="card">
                     <img src="/img/courses.png" alt="Ver cursos">
