--- a/src/main/resources/HTML/administrador/registroAdministrador.html
+++ b/src/main/resources/HTML/administrador/registroAdministrador.html
@@ -9,6 +9,9 @@
 <body>
 <h2>Registro de Administrador</h2>
 <form action="/registrarAdmin" method="post">
+    <label for="id_admin">ID de administrador:</label><br>
+    <input type="text" id="id_admin" name="id_admin" required><br><br>
+
     <label for="name">Nombre:</label><br>
     <input type="text" id="name" name="name" required><br><br>
 
@@ -21,11 +24,9 @@
     <label for="password">Contraseña:</label><br>
     <input type="password" id="password" name="password" required><br><br>
 
-    <label for="profile">Perfil:</label><br>
+    <label for="profile">Código:</label><br>
     <input type="text" id="profile" name="profile" required><br><br>
 
-    <label for="id_admin">Código de administrador:</label><br>
-    <input type="text" id="id_admin" name="id_admin" required><br><br>
 
     <input type="submit" class="btn-registrar-admin" value="Registrar Administrador">
 </form>
