--- a/src/main/resources/HTML/estudiante/RegistroEstudiante.html
+++ b/src/main/resources/HTML/estudiante/RegistroEstudiante.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Formulario de Estudiante</h1>
-<form action="/submit" method="post">
+<form action="/registrarEstudiante" method="post">
   <label for="id_student">ID del Estudiante:</label>
   <input type="text" id="id_student" name="id_student" required><br><br>
 
@@ -38,7 +38,7 @@
   <label for="study_level">Nivel de Estudio:</label>
   <input type="text" id="study_level" name="study_level" required><br><br>
 
-  <input type="submit" value="Enviar">
+  <input type="/registrarEstudiante" class="btn-registrar-student" value="Registrar Estudiante">
 </form>
 </body>
 </html>
