--- a/src/main/resources/HTML/administrador/verUsuario.html
+++ b/src/main/resources/HTML/administrador/verUsuario.html
@@ -36,7 +36,7 @@
             <div class="grid">
                 <div class="card">
                     <img src="/img/users.png" alt="Ver usuarios">
-                    <a href="#">Ver estudiantes</a>
+                    <a href="/listarEstudiante">Ver estudiantes</a>
                 </div>
                 <div class="card">
                     <img src="/img/registers.png" alt="Ver matrículas">
