crud de Administrador

--- a/src/main/resources/HTML/administrador/verUsuario.html
+++ b/src/main/resources/HTML/administrador/verUsuario.html
@@ -43,8 +43,8 @@
                     <a href="/listarDocentes">Ver docentes</a>
                 </div>
                 <div class="card">
-                    <img src="/img/classroom.png" alt="Ver aulas">
-                    <a href="#">Ver postulantes</a>
+                    <img src="/img/classroom.png" alt="Ver Administradores">
+                    <a href="/listarAdministrador">Ver Administradores</a>
                 </div>
             </div>
         </section>
