--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -33,7 +33,7 @@
                 nosotros somos "El camino hacia la EXCELENCIA"
             </p>
             <a href="#" class="btn btn-contacto">Conoce Más <i class="fas fa-chevron-right"></i></a>
-            <a href="/HTML/Usuario/solicitarVacante.html" class="btn btn-registrar">Inscribete Ahora <i class="fas fa-chevron-right"></i></a>
+            <a href="/HTML/Usuario/solicitarVacante.html" method="get" class="btn btn-registrar">Inscribete Ahora <i class="fas fa-chevron-right"></i></a>
         </div>
         <div class="image">
             <img src="/img/student.png" alt="Estudiantes">
